ingress-kibana.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/kibana/(.*)$ /$1 break;
      proxy_set_header Authorization "";
    nginx.ingress.kubernetes.io/rewrite-target: /
  name: kibana-service
  namespace: logging
spec:
  rules:
    - http:
        paths:
          - backend:
              serviceName: kibana-service
              servicePort: 5601
            path: /kibana
